# ski_tycoon_v2

./: Cargo.toml  Readme.md  build_shaders.py
assets/: untitled.blend
gfx_renderer/: Cargo.toml
gfx_renderer/src/: main.rs
ski_tycoon_v2/: Cargo.toml
ski_tycoon_v2/src/: asset_manager.rs  bindable.rs  camera.rs  events.rs  graph.rs  graphics_engine.rs  graphics_system.rs  grid.rs  gui.rs  lib.rs  lift.rs  model.rs  skiier.rs  terrain.rs  texture.rs
ski_tycoon_v2/src/graphics_engine/: gfx.rs  mesh.rs  vulkan.rs  webgl.rs
ski_tycoon_v2/src/graphics_engine/gfx/: bind_arena.rs  circular_buffer.rs  shader.rs
ski_tycoon_v2/src/graphics_engine/gfx/compiled_shader/: gui.frag.spv  gui.vert.spv  screen.frag.spv  shader.frag.spv  world.vert.spv
ski_tycoon_v2/src/graphics_engine/gfx/data/: gui.frag  gui.vert  screen.frag  screen.vert  shader.frag  shader.vert  shader.vert.spv
ski_tycoon_v2/src/graphics_engine/vulkan/: shader.rs
ski_tycoon_v2/src/graphics_engine/vulkan/compiled_shader/: screen.vert.spv  world.vert.spv
ski_tycoon_v2/src/graphics_engine/vulkan/data/: world.vert
ski_tycoon_v2/src/graphics_engine/webgl/: shader.rs
ski_tycoon_v2/src/gui/: egui_integration.rs
ski_tycoon_v2/src/heightmaps/: cone.pgm  output.pgm
ski_tycoon_v2/src/skiier/: behavior_tree.rs
ski_tycoon_v2/src/terrain/: pgm_parser.rs
src/: asset_manager.rs  bindable.rs  camera.rs  egui_integration.rs  events.rs  graph.rs  graphics_engine.rs  graphics_system.rs  grid.rs  gui.rs  lib.rs  lift.rs  model.rs  skiier.rs  terrain.rs
src/graphics_engine/: mesh.rs  shader.rs
src/gui/: egui_integration.rs
src/skiier/: behavior_tree.rs
vulkan_renderer/: Cargo.toml
vulkan_renderer/src/: main.rs
www/: index.html  index.js  package.json
