[package]
name = "ski-tycoon_v2"
version = "0.1.0"
authors = ["Nicholas Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2"
nalgebra = "0.23.1"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

generational-arena = "0.2.8"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion="0.3.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
legion ={version= "0.3.1",default-features = false, features = ["wasm-bindgen"] }
[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlTexture',
  'WebGlShader',
  'WebGlFramebuffer',
  'Window',
  
]
[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
