[package]
name = "ski_tycoon_v2"
version = "0.1.0"
authors = ["Nicholas Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"
resolver = "2"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[dependencies]
js-sys = "0.3.46"
egui = "0.6"
wasm-bindgen = "0.2"
nalgebra = "0.23.1"
priority-queue = "1.0.5"
tobj = "2.0.3"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }


console_log="0.2.0"
log="^0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
legion ={version= "0.3.1",default-features = false, features = ["wasm-bindgen","codegen"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
legion ={version= "0.3.1",default-features = true }
image = "0.23.12"
gfx-hal = "0.7"
gfx-auxil = "0.8"
gfx-backend-empty = "0.7"
gfx-backend-gl = {version="0.7",optional=true}
gfx-backend-dx11 = {version="0.7",optional=true}
gfx-backend-dx12 = {version="0.7",optional=true}
gfx-backend-metal = {version="0.7",optional=true}
gfx-backend-vulkan = {version="0.7",optional=true}
winit = { version = "0.24", features = ["web-sys"] }
generational-arena="0.2.8"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebGlProgram',
  'WebGlTexture',
  'WebGlShader',
  'WebGlFramebuffer',
  'Window',
  
]
[dev-dependencies]
wasm-bindgen-test = "0.3.13"


